force-app/main/default/objects/Sales_Rep_Script__c/Sales_Rep_Script__c.object-meta.xml
<CustomObject>
    <label>Sales Rep Script</label>
    <nameField>
        <label>Sales Rep Scripts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Rep Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>