force-app/main/default/objects/Sales_Rep_Script__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To store an opportunity specified for a script.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Rep Scripts</relationshipLabel>
    <relationshipName>Sales_Rep_Scripts</relationshipName>
    <type>Lookup</type>
</CustomField>