force-app/main/default/objects/Sales_Rep_Script__c/fields/OpportunityStage__c.field-meta.xml
<CustomField>
    <fullName>OpportunityStage__c</fullName>
    <label>OpportunityStage</label>
    <length>32</length>
    <type>Text</type>
</CustomField>