force-app/main/default/objects/Sales_Rep_Script__c/fields/OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>OpportunityType__c</fullName>
    <label>OpportunityType</label>
    <length>32</length>
    <type>Text</type>
</CustomField>