force-app/main/default/objects/Sales_Rep_Script__c/fields/Script__c.field-meta.xml
<CustomField>
    <fullName>Script__c</fullName>
    <label>Script</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>