force-app/main/default/objects/Sales_Rep_Script__c/fields/scriptUser__c.field-meta.xml
<CustomField>
    <fullName>scriptUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>scriptUser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Rep_Scripts</relationshipName>
    <type>Lookup</type>
</CustomField>