force-app/main/default/objects/Sales_Rep_Script__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <description>A Script should have a unique combination of filter fields</description>
    <formula>OpportunityStage__c +  OpportunityType__c + UserRole__c + scriptUser__c + Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UniqueKey</label>
    <type>Text</type>
</CustomField>