force-app/main/default/objects/Sales_Rep_Script__c/fields/UserRole__c.field-meta.xml
<CustomField>
    <fullName>UserRole__c</fullName>
    <label>UserRole</label>
    <length>32</length>
    <type>Text</type>
</CustomField>